crash ! move a keyframe when display render preview: cycles #56612

Closed
opened 2018-08-30 04:03:39 +02:00 by bdp · 4 comments

System Information
windows10
Nvdia GeForce GT 610/PCIe/SSE2

Blender Version
Broken: (blender2.80.21 hash:a4a9f4b3d19)

Short description of error
crash when move/scale keyframe in dopeSheet when display render preview: cycles
Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF6ABBB9C97

Exact steps for others to reproduce the error
1.blend

  1. open my file
  2. in viewport set display render preview: cycles
  3. move a keyframe
  4. crash!
**System Information** windows10 Nvdia GeForce GT 610/PCIe/SSE2 **Blender Version** Broken: (blender2.80.21 hash:a4a9f4b3d19) **Short description of error** crash when move/scale keyframe in dopeSheet when display render preview: cycles Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6ABBB9C97 **Exact steps for others to reproduce the error** [1.blend](https://archive.blender.org/developer/F4452722/1.blend) 1. open my file 2. in viewport set display render preview: cycles 3. move a keyframe 4. crash!
Author

Added subscriber: @bdp

Added subscriber: @bdp

This issue was referenced by blender/cycles@008085857a

This issue was referenced by blender/cycles@008085857ab66d56ada8a3c4621033695e76308e

This issue was referenced by 49041e5611

This issue was referenced by 49041e5611bd3974976c9cceec8d2f81cd5a1d9b
Brecht Van Lommel self-assigned this 2018-08-30 12:36:31 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56612
No description provided.