Fix T56612: crash in Cycles viewport render update, after recent changes.

BVH8 refitting code had a bug.